# Stream-processing-with-Azure-Functions

./: .gitignore  README.md  azure.yaml
event-generator/: .env.template  README.md  pyproject.toml
event-generator/vehicle_generator/: __init__.py  cli.py  generator.py  models.py
function-app/: EventHubsTrigger.cs  VehicleAnalyticsService.cs  host.json
infra/: main.bicep
infra/scripts/: postprovision.ps1
